# cppTemplateProject

./: .clang-format  .gitignore  CMakeLists.txt  README.md  runClangFormat.sh
cmake/: Doxygen.cmake
src/: CMakeLists.txt  main.cpp
src/hello/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt
